Improve handling of JAR classpath entries